# marvels

./: .gitignore  AGENTS.md  Cargo.toml  build.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
client/: Cargo.toml
client/src/: client.rs  http.rs  lib.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: dokumentation.md
example/client_exp/: Cargo.toml
example/client_exp/src/: main.rs
example/server_exp/: AGENTS.md  Cargo.toml
example/server_exp/src/: main.rs
marvel_error/: Cargo.toml
marvel_error/src/: error.rs
proto/: Cargo.toml  authentication.proto  build.rs  security.proto
proto/src/: authentication.rs  lib.rs  security.proto
server/: Cargo.toml
server/src/: authentication.rs  lib.rs  main.rs  server.rs  token.rs
src/: main.rs  security.rs
src/marvel_error/: Cargo.toml
src/proto/: authentication.proto
