[package]
name = "marvels"
version = "0.1.0"
edition = "2024"
authors = ["Paul Pacher <paul.pacher@gmail.com>"]

[dependencies]


[workspace]
members = [
    "cli",
    "client", "core",
    "proto",
    "server"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
reqwest = "0"