[package]
name = "server_exp"
version = "0.1.0"
edition = "2024"

[dependencies]
server = { path = "../marvels/server" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

